<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BuddyLearner</string>
    <string name="username_text_field">username</string>
    <string name="password_text_field">password</string>
    <string name="email_text_field">email</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="log_in_button_text">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="signed_up">"Signed up !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Not a valid password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="menu_drawer">menu</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="title_activity_topics">TopicsActivity</string>
    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Suggestions</string>
    <string name="first_tab_description">first tab</string>
    <string name="topics_view_pager_description">description du view pager</string>
    <string name="topics_floating_button_description">un bouton flottant</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_topics">Topics</string>
    <string name="user_role_text_field">choose your role</string>

    <string name="channel_name">my_channel_01</string>
</resources>