<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.signup.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="Sign up"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textView2" />

    <!--    username-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_username_text_field"
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="5dp"
        android:hint="@string/username_text_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_email_text_field"
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="175dp"
        android:layout_marginRight="5dp"
        android:hint="@string/email_text_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_password_text_field"
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="250dp"
        android:layout_marginRight="5dp"
        android:hint="@string/password_text_field"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- user role -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="330dp"
        android:layout_marginRight="5dp"
        android:hint="@string/user_role_text_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:id="@+id/textInputLayout">

        <!-- can find app:simpleItems attribute on  AutoCompleteTextView
        to add items list
         -->
        <!-- can add poppuptheme attribute -->
        <AutoCompleteTextView
            android:id="@+id/sign_up_user_role_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:imeOptions="actionDone"
            android:completionThreshold="1"
            android:dropDownHeight="wrap_content"
            android:dropDownWidth="match_parent"
            android:textColor="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up_button"
        style="?attr/materialButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="412dp"
        android:layout_marginRight="90dp"
        android:text="@string/sign_up_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
